src/codegen/grammar/BashParser.js
// Generated from ./grammar/Bash.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import BashVisitor from './BashVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class BashParser extends antlr4.Parser {

    static grammarFileName = "Bash.g4";
    static literalNames = [ null, "';'", null, "'='" ];
    static symbolicNames = [ null, null, "WHITESPACE", "EQUALS", "REDIRECTION", 
                             "LINE_CONTINUATION", "NEWLINE", "QUOTED_EXPRESSION", 
                             "SLANTQUOTED_EXPRESSION", "DOUBLEQUOTED_EXPRESSION", 
                             "SINGLEQUOTED_EXPRESSION", "UNQUOTED_EXPRESSION", 
                             "ASSIGNMENT", "VARIABLE_NAME", "WORD", "VARIABLE_VALUE", 
                             "ANY" ];
    static ruleNames = [ "prog", "command", "assignment", "simple_command", 
                         "simple_command_executable", "simple_command_element", 
                         "redirection_list", "multiline_command", "multiline_command_line" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = BashParser.ruleNames;
        this.literalNames = BashParser.literalNames;
        this.symbolicNames = BashParser.symbolicNames;
    }



	prog() {
	    let localctx = new ProgContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, BashParser.RULE_prog);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 18;
	        this.command();
	        this.state = 23;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===1 || _la===6) {
	            this.state = 19;
	            _la = this._input.LA(1);
	            if(!(_la===1 || _la===6)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 20;
	            this.command();
	            this.state = 25;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 26;
	        this.match(BashParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	command() {
	    let localctx = new CommandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, BashParser.RULE_command);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 28;
	        this.simple_command();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment() {
	    let localctx = new AssignmentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, BashParser.RULE_assignment);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 30;
	        this.match(BashParser.ASSIGNMENT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	simple_command() {
	    let localctx = new Simple_commandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, BashParser.RULE_simple_command);
	    var _la = 0;
	    try {
	        this.state = 63;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	        case 10:
	        case 14:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 32;
	            this.simple_command_executable();
	            this.state = 37;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 33;
	                this.match(BashParser.WHITESPACE);
	                this.state = 34;
	                this.simple_command_element();
	                this.state = 39;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 41;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 40;
	                this.redirection_list();
	            }

	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 43;
	            this.assignment();
	            this.state = 48;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 44;
	                    this.match(BashParser.WHITESPACE);
	                    this.state = 45;
	                    this.assignment(); 
	                }
	                this.state = 50;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
	            }

	            this.state = 51;
	            this.match(BashParser.WHITESPACE);
	            this.state = 52;
	            this.simple_command_executable();
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 53;
	                this.match(BashParser.WHITESPACE);
	                this.state = 54;
	                this.simple_command_element();
	                this.state = 59;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===4) {
	                this.state = 60;
	                this.redirection_list();
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	simple_command_executable() {
	    let localctx = new Simple_command_executableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, BashParser.RULE_simple_command_executable);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 17920) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	simple_command_element() {
	    let localctx = new Simple_command_elementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, BashParser.RULE_simple_command_element);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 17924) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	redirection_list() {
	    let localctx = new Redirection_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, BashParser.RULE_redirection_list);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 70; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 69;
	            this.match(BashParser.REDIRECTION);
	            this.state = 72; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiline_command() {
	    let localctx = new Multiline_commandContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, BashParser.RULE_multiline_command);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===12) {
	            this.state = 74;
	            this.assignment();
	            this.state = 79;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 80;
	        this.multiline_command_line();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiline_command_line() {
	    let localctx = new Multiline_command_lineContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, BashParser.RULE_multiline_command_line);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.simple_command_element();
	        this.state = 87;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 83;
	            this.match(BashParser.WHITESPACE);
	            this.state = 84;
	            this.simple_command_element();
	            this.state = 89;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 90;
	        this.match(BashParser.LINE_CONTINUATION);
	        this.state = 91;
	        this.multiline_command_line();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

BashParser.EOF = antlr4.Token.EOF;
BashParser.T__0 = 1;
BashParser.WHITESPACE = 2;
BashParser.EQUALS = 3;
BashParser.REDIRECTION = 4;
BashParser.LINE_CONTINUATION = 5;
BashParser.NEWLINE = 6;
BashParser.QUOTED_EXPRESSION = 7;
BashParser.SLANTQUOTED_EXPRESSION = 8;
BashParser.DOUBLEQUOTED_EXPRESSION = 9;
BashParser.SINGLEQUOTED_EXPRESSION = 10;
BashParser.UNQUOTED_EXPRESSION = 11;
BashParser.ASSIGNMENT = 12;
BashParser.VARIABLE_NAME = 13;
BashParser.WORD = 14;
BashParser.VARIABLE_VALUE = 15;
BashParser.ANY = 16;

BashParser.RULE_prog = 0;
BashParser.RULE_command = 1;
BashParser.RULE_assignment = 2;
BashParser.RULE_simple_command = 3;
BashParser.RULE_simple_command_executable = 4;
BashParser.RULE_simple_command_element = 5;
BashParser.RULE_redirection_list = 6;
BashParser.RULE_multiline_command = 7;
BashParser.RULE_multiline_command_line = 8;

class ProgContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_prog;
    }

	command = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(CommandContext);
	    } else {
	        return this.getTypedRuleContext(CommandContext,i);
	    }
	};

	EOF() {
	    return this.getToken(BashParser.EOF, 0);
	};

	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(BashParser.NEWLINE);
	    } else {
	        return this.getToken(BashParser.NEWLINE, i);
	    }
	};


	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitProg(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class CommandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_command;
    }

	simple_command() {
	    return this.getTypedRuleContext(Simple_commandContext,0);
	};

	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitCommand(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AssignmentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_assignment;
    }

	ASSIGNMENT() {
	    return this.getToken(BashParser.ASSIGNMENT, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitAssignment(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Simple_commandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_simple_command;
    }

	simple_command_executable() {
	    return this.getTypedRuleContext(Simple_command_executableContext,0);
	};

	WHITESPACE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(BashParser.WHITESPACE);
	    } else {
	        return this.getToken(BashParser.WHITESPACE, i);
	    }
	};


	simple_command_element = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Simple_command_elementContext);
	    } else {
	        return this.getTypedRuleContext(Simple_command_elementContext,i);
	    }
	};

	redirection_list() {
	    return this.getTypedRuleContext(Redirection_listContext,0);
	};

	assignment = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AssignmentContext);
	    } else {
	        return this.getTypedRuleContext(AssignmentContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitSimple_command(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Simple_command_executableContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_simple_command_executable;
    }

	WORD() {
	    return this.getToken(BashParser.WORD, 0);
	};

	DOUBLEQUOTED_EXPRESSION() {
	    return this.getToken(BashParser.DOUBLEQUOTED_EXPRESSION, 0);
	};

	SINGLEQUOTED_EXPRESSION() {
	    return this.getToken(BashParser.SINGLEQUOTED_EXPRESSION, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitSimple_command_executable(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Simple_command_elementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_simple_command_element;
    }

	WORD() {
	    return this.getToken(BashParser.WORD, 0);
	};

	DOUBLEQUOTED_EXPRESSION() {
	    return this.getToken(BashParser.DOUBLEQUOTED_EXPRESSION, 0);
	};

	SINGLEQUOTED_EXPRESSION() {
	    return this.getToken(BashParser.SINGLEQUOTED_EXPRESSION, 0);
	};

	WHITESPACE() {
	    return this.getToken(BashParser.WHITESPACE, 0);
	};

	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitSimple_command_element(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Redirection_listContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_redirection_list;
    }

	REDIRECTION = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(BashParser.REDIRECTION);
	    } else {
	        return this.getToken(BashParser.REDIRECTION, i);
	    }
	};


	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitRedirection_list(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Multiline_commandContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_multiline_command;
    }

	multiline_command_line() {
	    return this.getTypedRuleContext(Multiline_command_lineContext,0);
	};

	assignment = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(AssignmentContext);
	    } else {
	        return this.getTypedRuleContext(AssignmentContext,i);
	    }
	};

	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitMultiline_command(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Multiline_command_lineContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = BashParser.RULE_multiline_command_line;
    }

	simple_command_element = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Simple_command_elementContext);
	    } else {
	        return this.getTypedRuleContext(Simple_command_elementContext,i);
	    }
	};

	LINE_CONTINUATION() {
	    return this.getToken(BashParser.LINE_CONTINUATION, 0);
	};

	multiline_command_line() {
	    return this.getTypedRuleContext(Multiline_command_lineContext,0);
	};

	WHITESPACE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(BashParser.WHITESPACE);
	    } else {
	        return this.getToken(BashParser.WHITESPACE, i);
	    }
	};


	accept(visitor) {
	    if ( visitor instanceof BashVisitor ) {
	        return visitor.visitMultiline_command_line(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




BashParser.ProgContext = ProgContext; 
BashParser.CommandContext = CommandContext; 
BashParser.AssignmentContext = AssignmentContext; 
BashParser.Simple_commandContext = Simple_commandContext; 
BashParser.Simple_command_executableContext = Simple_command_executableContext; 
BashParser.Simple_command_elementContext = Simple_command_elementContext; 
BashParser.Redirection_listContext = Redirection_listContext; 
BashParser.Multiline_commandContext = Multiline_commandContext; 
BashParser.Multiline_command_lineContext = Multiline_command_lineContext; 
